force-app/main/default/objects/ABCD_Case_Detail__c/ABCD_Case_Detail__c.object-meta.xml
<CustomObject>
    <label>ABCD Case Detail</label>
    <nameField>
        <label>ABCD Case Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ABCD Case Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>