force-app/main/default/objects/ABCD_Case_Detail__c/fields/Account_Holding__c.field-meta.xml
<CustomField>
    <fullName>Account_Holding__c</fullName>
    <label>Account Holding #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>