force-app/main/default/objects/ABCD_Case_Detail__c/fields/Agent_Bot__c.field-meta.xml
<CustomField>
    <fullName>Agent_Bot__c</fullName>
    <label>Agent/Bot</label>
    <length>255</length>
    <type>Text</type>
</CustomField>