force-app/main/default/objects/ABCD_Case_Detail__c/fields/Alternative_Number__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Number__c</fullName>
    <label>Alternative Number</label>
    <type>Phone</type>
</CustomField>