force-app/main/default/objects/ABCD_Case_Detail__c/fields/Call_SMS_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Call_SMS_Date_Time__c</fullName>
    <label>Call/SMS Date-Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>