force-app/main/default/objects/ABCD_Case_Detail__c/fields/Check_Consent__c.field-meta.xml
<CustomField>
    <fullName>Check_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Consent</label>
    <type>Checkbox</type>
</CustomField>