force-app/main/default/objects/ABCD_Case_Detail__c/fields/Customer_Sentiment_As_per_Agent__c.field-meta.xml
<CustomField>
    <fullName>Customer_Sentiment_As_per_Agent__c</fullName>
    <label>Customer Sentiment (As per Agent)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Happy</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Angry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>