force-app/main/default/objects/ABCD_Case_Detail__c/fields/DND_Channels_Drop_down__c.field-meta.xml
<CustomField>
    <fullName>DND_Channels_Drop_down__c</fullName>
    <label>DND Channels (Drop down)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>SMS / WhatsApp</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>