force-app/main/default/objects/ABCD_Case_Detail__c/fields/Function__c.field-meta.xml
<CustomField>
    <fullName>Function__c</fullName>
    <label>Function</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HI</fullName>
                <label>Health Insurance</label>
            </value>
            <value>
                <fullName>LI</fullName>
                <label>Life Insurance</label>
            </value>
            <value>
                <fullName>MI</fullName>
                <label>Motor Insurance</label>
            </value>
            <value>
                <fullName>PC</fullName>
                <label>Portfolio</label>
            </value>
            <value>
                <fullName>CS</fullName>
                <label>Credit Score</label>
            </value>
            <value>
                <fullName>MF</fullName>
                <label>Mutual Fund</label>
            </value>
            <value>
                <fullName>DG</fullName>
                <label>Digigold</label>
            </value>
            <value>
                <fullName>DM</fullName>
                <label>Demat</label>
            </value>
            <value>
                <fullName>DS</fullName>
                <label>Deposit</label>
            </value>
            <value>
                <fullName>PL</fullName>
                <label>Personal Loan</label>
            </value>
            <value>
                <fullName>BL</fullName>
                <label>Buisness Loan</label>
            </value>
            <value>
                <fullName>HFL</fullName>
                <label>House Finance Loan</label>
            </value>
            <value>
                <fullName>DHE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>