force-app/main/default/objects/ABCD_Case_Detail__c/fields/Generated_From__c.field-meta.xml
<CustomField>
    <fullName>Generated_From__c</fullName>
    <label>Generated From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>