force-app/main/default/objects/ABCD_Case_Detail__c/fields/Latest_Notes__c.field-meta.xml
<CustomField>
    <fullName>Latest_Notes__c</fullName>
    <label>Latest Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>