force-app/main/default/objects/ABCD_Case_Detail__c/fields/Litmus_Triggered__c.field-meta.xml
<CustomField>
    <fullName>Litmus_Triggered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Litmus Triggered</label>
    <type>Checkbox</type>
</CustomField>