force-app/main/default/objects/ABCD_Case_Detail__c/fields/LOB__c.field-meta.xml
<CustomField>
    <fullName>LOB__c</fullName>
    <description>Lead LOB</description>
    <label>LOB</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABSLI</fullName>
            </value>
            <value>
                <fullName>AMC</fullName>
            </value>
            <value>
                <fullName>ABHI</fullName>
            </value>
            <value>
                <fullName>ABML</fullName>
            </value>
            <value>
                <fullName>ABFL</fullName>
            </value>
            <value>
                <fullName>Motor insurance</fullName>
            </value>
            <value>
                <fullName>ABHFL</fullName>
            </value>
            <value>
                <fullName>NPS</fullName>
            </value>
            <value>
                <fullName>Travel insurance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>