force-app/main/default/objects/ABCD_Case_Detail__c/fields/Mark_consent_No__c.field-meta.xml
<CustomField>
    <fullName>Mark_consent_No__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mark consent No</label>
    <type>Checkbox</type>
</CustomField>