force-app/main/default/objects/ABCD_Case_Detail__c/fields/Nature_of_Calls__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Calls__c</fullName>
    <label>Nature of Calls</label>
    <length>255</length>
    <type>Text</type>
</CustomField>