force-app/main/default/objects/ABCD_Case_Detail__c/fields/No_of_calls_SMS__c.field-meta.xml
<CustomField>
    <fullName>No_of_calls_SMS__c</fullName>
    <label>No of calls/SMS</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>