force-app/main/default/objects/ABCD_Case_Detail__c/fields/Pref_Language__c.field-meta.xml
<CustomField>
    <fullName>Pref_Language__c</fullName>
    <label>Pref Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hindi</fullName>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>