force-app/main/default/objects/ABCD_Case_Detail__c/fields/Previous_SR__c.field-meta.xml
<CustomField>
    <fullName>Previous_SR__c</fullName>
    <label>Previous SR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>