force-app/main/default/objects/ABCD_Case_Detail__c/fields/Product_pitched__c.field-meta.xml
<CustomField>
    <fullName>Product_pitched__c</fullName>
    <label>Product pitched</label>
    <length>255</length>
    <type>Text</type>
</CustomField>