force-app/main/default/objects/ABCD_Case_Detail__c/fields/TRAI_Registered__c.field-meta.xml
<CustomField>
    <fullName>TRAI_Registered__c</fullName>
    <label>TRAI Registered</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>