force-app/main/default/objects/ABCD_Case_Detail__c/validationRules/Alternative_Number_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Alternative_Number_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Alternative_Number__c)), 
    NOT(REGEX(Alternative_Number__c, &quot;^[0-9]{10}$&quot;))
)</errorConditionFormula>
    <errorDisplayField>Alternative_Number__c</errorDisplayField>
    <errorMessage>Alternative Number Should be 10 digit number.</errorMessage>
</ValidationRule>