force-app/main/default/objects/ABCD_Case_Detail__c/validationRules/Pincode_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Pincode_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Pincode__c)), 
    NOT(REGEX(Pincode__c, &quot;^[0-9]{6}$&quot;))
)</errorConditionFormula>
    <errorDisplayField>Pincode__c</errorDisplayField>
    <errorMessage>Pincode should be 6 digit number.</errorMessage>
</ValidationRule>